# dropbox_backup_to_external_disk_tui

./: .gitattributes  .gitignore  Cargo.toml  README.md  cache30.txt  temp30.txt
automation_tasks_rs/: Cargo.toml
automation_tasks_rs/src/: main.rs
src/: dropbox_backup_to_external_disk.rs
