[package]
name = "dropbox_backup_to_external_disk"
version = "2023.928.1539"
description = "TUI binary executable, one way sync from Dropbox to external disc"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/dropbox_backup_to_external_disk/"
categories = ["programming"]
keywords = ["dropbox"]
publish = false

[dependencies]
log = "0.4"
pretty_env_logger="0.5.0"
chrono = "0.4.15"
unwrap = "1.2.1"
walkdir = "2.3.1"
filetime = "0.2.16"
humantime = "2.1.0"
rayon = "1.5.1"
uncased = "0.9"
dropbox-content-hasher = "0.3.0"
num-format = "0.4.0"
ctrlc = "3.1.9"
exitcode = "1.1.2"
crossterm = "0.27.0"
ratatui = "0.23.0"

fernet="0.2.1"
directories = "5.0.1"
inquire = "0.6.2"
anyhow="1.0.75"
thiserror="1.0.48"
serde_json = "1.0.107"
serde="1.0.188"
once_cell = "1.18.0"

[dependencies.dropbox-sdk]
version = "0.16.0"
default_features = false
features = ["dbx_files", "default_client"]
